# ClaimGuard

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  middleware.py  redis.py  responses.py  security.py  websocket.py
backend/app/models/: __init__.py  audit.py  base.py  claim.py  investigation.py  member.py  notification.py  provider.py  user.py
backend/app/modules/: __init__.py
backend/app/repositories/: __init__.py  base.py  claim.py  investigation.py  member.py  notification.py  provider.py  user.py
backend/app/schemas/: __init__.py  audit.py  auth.py  claim.py  common.py  dashboard.py  investigation.py  member.py  provider.py
backend/app/services/: __init__.py  audit.py  auth.py  claims.py  dashboard.py  investigations.py  members.py  notifications.py  (+1 more)
backend/docker/: Dockerfile
backend/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  FRAUDSHIELD_PRODUCTION_DATA.md
backend/migrations/: env.py
backend/scripts/: entrypoint.sh  restore_demo_claims.py  seed.py  seed_data.py  train_fraud_model.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_claims.py  test_fraudshield.py  test_fraudshield_ml.py  test_health.py  test_ingestion.py  test_notifications_delivery.py  test_rbac.py  test_reads.py  test_security.py  test_websocket.py
(+96 files in other folders)
